--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
@@ -24,25 +24,34 @@ jobs:
       
       - name: Run linter
         run: npm run lint
+        continue-on-error: false
 
   build:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        run: |
+          # Tentar instalar normalmente
+          npm ci || {
+            echo "⚠️ npm ci falhou, tentando npm install..."
+            npm install
+          }
+        continue-on-error: false
       
       - name: Build application
         run: npm run build
         env:
-          NEXT_PUBLIC_ALCHEMY_API_KEY: ${{ secrets.NEXT_PUBLIC_ALCHEMY_API_KEY }}
+          # Variáveis de ambiente para build (valores padrão se secrets não estiverem configurados)
+          NEXT_PUBLIC_ALCHEMY_API_KEY: ${{ secrets.NEXT_PUBLIC_ALCHEMY_API_KEY || 'test-key-for-ci' }}
           NEXT_PUBLIC_CHAIN_ID: ${{ secrets.NEXT_PUBLIC_CHAIN_ID || '80002' }}
-
+          NEXT_PUBLIC_LIGHTHOUSE_API_KEY: ${{ secrets.NEXT_PUBLIC_LIGHTHOUSE_API_KEY || '' }}
+        continue-on-error: false
