fix: remove cache do npm (sem package-lock.json) e atualiza workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          # cache removido - projeto não tem package-lock.json
       
       - name: Install dependencies
         run: |
@@ -44,7 +44,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          # cache removido - projeto não tem package-lock.json
       
       - name: Install dependencies
         run: |
