feat: configuração completa do frontend
- Adicionado WagmiProvider para integração com wagmi hooks
- Configurado para Polygon Mainnet (Chain ID: 137) onde os contratos estão deployados
- Criada implementação local de contractData.ts (substitui @wodxpro/contract-data temporariamente)
- Configurado Thirdweb SDK (client criado, provider temporariamente desabilitado)
- Migrado variáveis sensíveis para .env.local
- Adicionados polyfills necessários para webpack
- Documentação completa: STATUS.md, THIRDWEB_SETUP.md, ENV_SETUP.md, etc.
- Build funcionando corretamente

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,20 @@ NEXT_PUBLIC_LIGHTHOUSE_API_KEY=your_lighthouse_key
 # NEXT_PUBLIC_WOD_TOKEN_ADDRESS=0x...
 # NEXT_PUBLIC_VALIDATOR_REGISTRY_ADDRESS=0x...
 
+# ============================================
+# THIRDWEB CONFIGURATION
+# ============================================
+
+# Thirdweb Client ID (para frontend)
+# Obtenha em: https://thirdweb.com/dashboard/settings/api-keys
+# Este valor pode ser público (NEXT_PUBLIC_*)
+NEXT_PUBLIC_THIRDWEB_CLIENT_ID=your_thirdweb_client_id
+
+# Thirdweb Project Info (opcional)
+THIRDWEB_PROJECT_NAME=wodxpro
+THIRDWEB_DOMAIN=wodx.pro
+THIRDWEB_ENS=wodxpro.eth
+
+# Polygon RPC (opcional - para Thirdweb SDK)
+# NEXT_PUBLIC_POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v2/your_key
+
