--- a/package.json
+++ b/package.json
@@ -17,24 +17,34 @@
     "@alchemy/aa-ethers": "^3.6.1",
     "@lighthouse-web3/sdk": "^0.4.3",
     "@tanstack/react-query": "^5.0.0",
-    "@wodxpro/contract-data": "^1.0.0",
     "ethers": "^6.8.0",
     "lucide-react": "^0.552.0",
     "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "thirdweb": "^5.0.0",
     "viem": "^2.0.0",
     "wagmi": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/react": "19.2.2",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
+    "https-browserify": "^1.0.0",
     "postcss": "^8.4.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "webpack": "^5.103.0"
   }
 }
