--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,9 +51,9 @@ jobs:
           # Se @wodxpro/contract-data não estiver no npm, usar versão do GitHub
           if ! npm view @wodxpro/contract-data version 2>/dev/null; then
             echo "⚠️ @wodxpro/contract-data não encontrado no npm, usando GitHub..."
-            npm install --save @wodxpro/contract-data@github:wodxpro/wod-eth
+            npm install --save --legacy-peer-deps @wodxpro/contract-data@github:wodxpro/wod-eth
           else
-            npm ci
+            npm ci --legacy-peer-deps
           fi
         continue-on-error: false
       
@@ -61,7 +61,8 @@ jobs:
         run: npm run build
         env:
           # Variáveis de ambiente para build (valores padrão se secrets não estiverem configurados)
+          # IMPORTANTE: Chain ID 137 = Polygon Mainnet (onde os contratos estão deployados)
           NEXT_PUBLIC_ALCHEMY_API_KEY: ${{ secrets.NEXT_PUBLIC_ALCHEMY_API_KEY || 'test-key-for-ci' }}
-          NEXT_PUBLIC_CHAIN_ID: ${{ secrets.NEXT_PUBLIC_CHAIN_ID || '80002' }}
+          NEXT_PUBLIC_CHAIN_ID: ${{ secrets.NEXT_PUBLIC_CHAIN_ID || '137' }}
           NEXT_PUBLIC_LIGHTHOUSE_API_KEY: ${{ secrets.NEXT_PUBLIC_LIGHTHOUSE_API_KEY || '' }}
         continue-on-error: false
