--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,9 @@ jobs:
           # Se @wodxpro/contract-data não estiver no npm, usar versão do GitHub
           if ! npm view @wodxpro/contract-data version 2>/dev/null; then
             echo "⚠️ @wodxpro/contract-data não encontrado no npm, usando GitHub..."
-            npm install --save @wodxpro/contract-data@github:wodxpro/wod-eth
+            npm install --save --legacy-peer-deps @wodxpro/contract-data@github:wodxpro/wod-eth
           else
-            npm install
+            npm install --legacy-peer-deps
           fi
       
       - name: Deploy to Vercel
