--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
           # Se @wodxpro/contract-data não estiver no npm, usar versão do GitHub
           if ! npm view @wodxpro/contract-data version 2>/dev/null; then
             echo "⚠️ @wodxpro/contract-data não encontrado no npm, usando GitHub..."
-            npm install --save @wodxpro/contract-data@github:wodxpro/wod-eth
+            npm install --save --legacy-peer-deps @wodxpro/contract-data@github:wodxpro/wod-eth
           else
-            npm ci
+            npm ci --legacy-peer-deps
           fi
         continue-on-error: false
       
